# rust-web

./: .gitignore  Cargo.toml  LICENSE  README.md  jygo.db
migrations/: .env
src/: main.rs  route.rs
src/api/: common_api.rs  error_handler.rs  mod.rs  user_api.rs
src/model/: common_form_param.rs  mod.rs  user.rs
src/util/: data_base.rs  database_deps.rs  mod.rs  web_deps.rs
static/: index.html
test/: rest-api_1.http
